# VkLearn

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  vcpkg.json
Assets/: CMakeLists.txt
Assets/Shaders/: CMakeLists.txt  blinn_phong.hlsl  colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  deferred_gbuffer.frag  deferred_gbuffer.vert  gltf_pbr.frag  gltf_pbr.vert  gradient.comp  gradient_color.comp  input_structures.hlsl  metallic_roughness.hlsl  project5.dom  project5.frag  project5.vert  project8.dom  project8.frag  project8.geom  project8.hull  skybox.frag  skybox.vert
Assets/Skybox/: irradiance_map.ktx
Source/: AllocatedBuffer.cpp  AllocatedImage.cpp  BindlessDescriptorSet.cpp  DefaultTextures.cpp  DescriptorWriter.cpp  FlyingCamera.cpp  GraphicsPipelineBuilder.cpp  ImGuiContext.cpp  ImmediateContext.cpp  LoadedGLTF.cpp  Material.cpp  MaterialDataBuffer.cpp  MeshAsset.cpp  MeshBuffer.cpp  OrbitCamera.cpp  RenderObject.cpp  VkCmds.cpp  VkContext.cpp  VkFrame.cpp  VkInit.cpp  VkObjects.cpp  VkRaii.cpp  VkRenderer.cpp  Window.cpp
Source/Core/: RefCount.cpp
cmake/: ShaderCompile.cmake
include/: AllocatedBuffer.h  AllocatedImage.h  BindlessDescriptorSet.h  DefaultTextures.h  DescriptorWriter.h  FlyingCamera.h  GraphicsPipelineBuilder.h  ImGuiContext.h  ImmediateContext.h  LoadedGLTF.h  Material.h  MaterialDataBuffer.h  MeshAsset.h  MeshBuffer.h  OrbitCamera.h  RenderObject.h  SDLDebug.h  Scene.h  VkCmds.h  VkContext.h  VkDebug.h  VkFrame.h  VkInit.h  VkObjects.h  VkRaii.h  VkRenderer.h  Window.h
include/Core/: Debug.h  DeletionQueue.h  MoveOnly.h  NonMoveCopyable.h  RefCount.h  Singleton.h
